# ftpr_onboard_slackbot

./: .gitignore  AUTHORS  CHECKLIST.md  ChangeLog  Dockerfile  README.md  SLACK_SETUP.md  create_slackbot.md  requirements.txt  setup.cfg  setup.py
etc/config/: ftpr_slack_bot.toml
etc/kubernetes/: deployment.yaml
ftpr_slack_bot/: __init__.py  slack_bot.py
ftpr_slack_bot/common/: __init__.py  config.py  devlake_api.py
