[metadata]
name = ftpr-slack-bot
summary = Slack bot for DevLake project creation
author = Red Hat FTPR Team
author_email = lsolarov@redhat.com
description = Slack bot to create and manage DevLake projects for GitHub repositories
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.9
license = Apache-2
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Quality Assurance
    Topic :: Utilities

[files]
packages =
    ftpr_slack_bot

[entry_points]
console_scripts =
    ftpr-slack-bot = ftpr_slack_bot.slack_bot:main
